# Diractive_Edge-Diractive_light_ESP32_Publish

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/LD2410/: CMakeLists.txt  radar_data_handle.c
components/LD2410/include/: radar_data_handle.h
components/Multi_Button/: CMakeLists.txt  user_app.c  user_key.c
components/Multi_Button/include/: user_key.h
components/ble_t/: CMakeLists.txt  ble_t.c
components/ble_t/include/: ble_t.h
components/blufi_t/: CMakeLists.txt  blufi_app.c  blufi_init.c  blufi_security.c
components/blufi_t/include/: blufi_app.h
components/light_control/: CMakeLists.txt  led_strip_encoder.c  light_control.c
components/light_control/include/: light_control.h
components/mqtt_t/: CMakeLists.txt  Kconfig  mqtt_init.c
components/mqtt_t/include/: mqtt_init.h
main/: CMakeLists.txt  main.c
main/include/: main.h
